This file summarizes the major and interesting changes for each release. For a
detailled list of changes, please see ChangeLog.

1.92.1 (UNRELEASED):
--------------------
Bug fixes:
 - apport-gtk: Fix crash on nonexisting icon. Thanks Evan Dandrea.
   (LP: #937354)

1.92 (2012-02-20):
------------------
Bug fixes:
 - ui.py: Fix wrong creation of "~" folder instead of expanding it to home
   directory when using "Examine locally". Thanks Jason Conti! (LP: #909149)
 - Replace file() calls with open() for Python 3 compatibility. Thanks Colin
   Watson!
 - launchpad.py: Avoid sending tag names with upper case. (LP: #924181)
 - report.py, crash_signature_addresses(): Fix crash if report does not have
   "Signal".
 - apport-gtk: Fix resize handling of expander in details window. Thanks Thomas
   Bechtold! (LP: #930562)
 - Clean up unnecessary imports. Thanks Evan Dandrea!

Improvements:
 - man/apport-bug.1: Mention where crash files are stored. Thanks David
   Kastrup.
 - hookutils.py, attach_hardware(): Sort ProcModules, thanks Brian Murray.
 - launchpad.py: Keep "Dependencies" attachment in duplicates. Thanks Brian
   Murray.
 - Reorganize the GNOME and KDE user interface to do the crash notifications
   and detail browser in a single dialog. Add test/gtk and test/kde tests to
   check expected dialog layout for different cases. Thanks Evan Dandrea!
 - Add support for the whoopsie-daisy crash reporting daemon by creating
   zero-byte .upload file stamps for crash reports. Thanks Evan Dandrea!

1.91 (2012-01-18):
------------------
Bug fixes:
 - crashdb.py, check_duplicate(): If a crash has a signature but no existing
   duplicate in the DB, also check for an existing address signature duplicate
   in the DB.
 - apport-retrace: Use DistroRelease specific subdirectory of the cache dir for
   mapping a file to a package, as these maps are release specific.
 - packaging-apt-dpkg.py: Refresh Contents.gz cache if it is older than one
   day.